[package]
name = "duckstruct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "./crates/ast" }
codegen = { path = "./crates/codegen" }
compile = { path = "./crates/compile" }
data-structures = { path = "./crates/data-structures" }
hir = { path = "./crates/hir" }
lexer = { path = "./crates/lexer" }
parser = { path = "./crates/parser" }
syntax = { path = "./crates/syntax" }
tycheck = { path = "./crates/tycheck" }
clap = { version = "4.0.17", features = ["derive"] }
project-root = "0.2.2"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"

[dev-dependencies]
serde = "1.0.145"


[workspace]
members = ["crates/*"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
