[package]
name = "duckstruct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "duckstruct"
path = "src/main.rs"

[features]
default = []
# Enable LLVM backend (requires LLVM 15+ installed). Use: cargo build --features llvm
llvm = ["compile/llvm"]

[dependencies]
ast = { path = "./crates/ast" }
cli = { path = "./crates/cli" }
codegen = { path = "./crates/codegen" }
compile = { path = "./crates/compile" }
data-structures = { path = "./crates/data-structures" }
hir = { path = "./crates/hir" }
lexer = { path = "./crates/lexer" }
parser = { path = "./crates/parser" }
syntax = { path = "./crates/syntax" }
tycheck = { path = "./crates/tycheck" }
project-root = "0.2.2"

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "serde"] }
serde = { version = "1.0.145", features = ["derive"] }
tempfile = "3"


[workspace]
members = ["crates/*"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
