[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable "llvm" feature and install LLVM 15 to use the LLVM backend.
llvm = ["inkwell"]

[dependencies]
tycheck = { path = "../tycheck" }
inkwell = { version = "0.8", features = ["llvm15-0"], optional = true }
