[package]
name = "compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable LLVM backend (requires LLVM 15+ installed).
llvm = ["codegen/llvm"]

[dependencies]
ast = { path = "../ast" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
codegen = { path = "../codegen" }
data-structures = { path = "../data-structures" }
duckstruct-std = { path = "../std" }
hir = { path = "../hir" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
syntax = { path = "../syntax" }
tycheck = { path = "../tycheck" }

[dev-dependencies]
tempfile = "3"
