[package]
name = "diagnostics"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.5.1"
parser = { path = "../parser" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
syntax = { path = "../syntax" }

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "serde"] }
text-size = "1.0.0"
