[package]
name = "parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
syntax = { path = "../syntax" }
drop_bomb = "0.1.5"
project-root = "0.2.2"
rowan = "0.15.4"
num-derive = "0.3.3"
num-traits = "0.2.14"
text-size = "1.0.0"

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "serde"] }
serde = { version = "1.0.145", features = ["derive"] }
